# dreams

./: .cvsignore  .gitignore  COPYING  Makefile.am  Makefile.in  README  README.md  aclocal.m4  changes  config.h  config.h.in  configure  configure.in
tools/1Dream/src/: .cvsignore  ColorsImpl.cpp  ColorsImpl.h  LittleSelector.cpp  LittleSelector.h  LittleSelector.ui  LittleSelectorImpl.cpp  LittleSelectorImpl.h  Main.cpp  Main.h  Makefile.am  Makefile.in  Properties.cpp  Properties.h  Properties.ui  PropertiesImpl.cpp  PropertiesImpl.h  Ruler.cpp  Ruler.h  Selector.cpp  Selector.h  Selector.ui  SelectorImpl.cpp  SelectorImpl.h  StripChartView.cpp  StripChartView.h  StripEntry.h  colors.cpp  colors.h  colors.ui  error.cpp  error.h  error.ui
tools/1Dream/src/xpm/: annCircle.xpm  annLine.xpm  annRect.xpm  annText.xpm  block.xpm  distanceTool.xpm  fopenIcon.xpm  help_back.xpm  help_contents.xpm  help_forward.xpm  help_home.xpm  ok.xpm  paddingTool.xpm  panningCursor.xpm  resetarto.xpm  selectTool.xpm  shadingCursor.xpm  shadingTool.xpm  viewmag+.xpm  viewmag-.xpm  zhm.xpm  zhp.xpm  zoomingCursor.xpm  zoomingTool.xpm  zoomingToolBar.xpm  zvm.xpm  zvp.xpm
tools/2Dreams/src/: 2Dreams.cpp  2Dreams.h  2DreamsDefs.h  AColorPalette.cpp  AColorPalette.h  ADFDefinitions.h  ADFMgr.cpp  ADFMgr.h  ADFParser1.cpp  ADFParser1.h  ADFParser2.cpp  ADFParser2.h  ADFParserBuilder.cpp  ADFParserBuilder.h  ADFParserInterface.h  AncestorDockWin.cpp  AncestorDockWin.h  CSLEngine.cpp  CSLEngine.h  ColDescVector.cpp  ColDescVector.h  ColDescriptor.cpp  ColDescriptor.h  ColorShapeItem.cpp  ColorShapeItem.h  ConfigDB.cpp  ConfigDB.h  DBStructs.h  DefaultSizes.h  DisDockWin.cpp  DisDockWin.h  DralGraphEdge.cpp  DralGraphEdge.h  DralGraphNode.cpp  DralGraphNode.h  DrawingTools.h  DreamsDB.cpp  DreamsDB.h  DumpMode.cpp  DumpMode.h  (+92 more)
tools/2Dreams/src/help/: basic.htm  contact.htm  intro.htm  preferences.htm  wnew.htm  ~1st-advanced.htm
tools/2Dreams/src/xpm/: 1downarrow.xpm  1uparrow.xpm  2dreams_logo2k_metal3.xpm  2dreams_logo2k_metal4.xpm  fileopen.xpm  mutabletag.xpm  palette.xpm  selectToolBar.xpm
tools/Dreams/src/: .cvsignore  00doxgen_mainpage.h  01doxgen_resource.h  02doxgen_floorplan.h  03doxgen_watch.h  04doxgen_waterfall.h  AColorPalette.cpp  AColorPalette.h  CSLCache.cpp  CSLCache.h  CSLData.cpp  CSLData.h  ColorShapeItem.cpp  ColorShapeItem.h  DrawingTools.h  Dreams.cpp  Dreams.h  DreamsDB.cpp  DreamsDB.h  DreamsDefs.h  DumpMode.cpp  DumpMode.h  EventShape.cpp  EventShape.h  FavoriteTags.cpp  FavoriteTags.h  Filter.cpp  Filter.h  FilterHandler.cpp  FilterHandler.h  HelpDreamsWindow.cpp  HelpDreamsWindow.h  IOMgr.cpp  IOMgr.h  ItemTab.cpp  ItemTab.h  ItemTabWidget.cpp  ItemTabWidget.h  ItemTabWidgetColumn.cpp  ItemTabWidgetColumn.h  (+33 more)
tools/Dreams/src/adf/: ADFDefinitions.h  ADFMap.h  ADFMapColorInterpolate.cpp  ADFMapColorInterpolate.h  ADFMapMatch.cpp  ADFMapMatch.h  ADFMgr.cpp  ADFMgr.h  ADFParser.cpp  ADFParser.h  ADFParserBuilder.cpp  ADFParserBuilder.h  ADFParserInterface.h  lexer.ll  parser.yy  parserCtrl.h
tools/Dreams/src/avt/: DAvtView.cpp  DAvtView.h  FloorplanDAvtView.cpp  FloorplanDAvtView.h  ResourceDAvtView.cpp  ResourceDAvtView.h  WaterfallDAvtView.cpp  WaterfallDAvtView.h
tools/Dreams/src/dDB/: ClockDomainMgr.cpp  ClockDomainMgr.h  DBConfig.cpp  DBConfig.h  DBItoa.h  DBListener.cpp  DBListener.h  DRALTag.h  Dict2064.cpp  Dict2064.h  DralDB.cpp  DralDB.h  DralDBDefinitions.h  DralDBSyntax.h  Hash6431.cpp  Hash6431.h  LogMgr.cpp  LogMgr.h  PrimeList.h  StrTable.cpp  StrTable.h  TagDescVector.cpp  TagDescVector.h
tools/Dreams/src/examples/: base.adf
tools/Dreams/src/expressions/: Expression.cpp  Expression.h  ExpressionBinaryFP.cpp  ExpressionBinaryFP.h  ExpressionBinaryInteger.cpp  ExpressionBinaryInteger.h  ExpressionBinaryString.cpp  ExpressionBinaryString.h  ExpressionConstant.h  ExpressionIf.cpp  ExpressionIf.h  ExpressionMap.cpp  ExpressionMap.h  ExpressionSet.cpp  ExpressionSet.h  ExpressionTag.cpp  ExpressionTag.h  ExpressionUnary.cpp  ExpressionUnary.h  Expressions.h  RuleEngine.cpp  RuleEngine.h
tools/Dreams/src/help/: adf.htm  dral.htm  index.htm
tools/Dreams/src/highlight/: HighLightMgr.cpp  HighLightMgr.h  HighLightMgrFloorplan.cpp  HighLightMgrFloorplan.h  HighLightMgrResource.cpp  HighLightMgrResource.h  HighLightMgrWFall.cpp  HighLightMgrWFall.h  highlight_colors_palette
tools/Dreams/src/mdi/: MDIDreamsWindow.cpp  MDIDreamsWindow.h  MDIFloorplanWindow.cpp  MDIFloorplanWindow.h  MDIResourceWindow.cpp  MDIResourceWindow.h  MDIResourceWindowCombo.cpp  MDIResourceWindowCombo.h  MDIResourceWindowFold.cpp  MDIResourceWindowFold.h  MDIWatchWindow.cpp  MDIWatchWindow.h  MDIWaterfallWindow.cpp  MDIWaterfallWindow.h
tools/Dreams/src/xpm/: 2dreams.xpm  2dreams_logo2k.xcf  2dreams_logo2k_metal2.xpm  2dreams_logo2k_metal5.xpm  bgfind.xpm  d4_logo.xpm  player_eject.xpm  player_end.xpm  player_fwd.xpm  player_pause.xpm  player_play.xpm  player_rew.xpm  player_start.xpm  (+2 more)
tools/TDreams/src/: .cvsignore  Makefile.am  Makefile.in  command_factory.h  command_line.cpp  command_line.h  command_line_gpl.cpp  commands.cpp  commands.h  comparators.h  configuration.cpp  configuration.h  dral_event_types.h  dumpers.cpp  dumpers.h  endpoint.h  extractors.h  item_tags.cpp  item_tags.h  lifetime.cpp  lifetime.h  listener.cpp  listener.h  main.cpp  node_db.cpp  node_db.h  parameter_dictionary.cpp  parameter_dictionary.h  selector.cpp  selector.h  selector_factory.h  svg_drawer.cpp  svg_drawer.h  time_object.h
tools/dral2PTV/src/: .cvsignore  Makefile.am  Makefile.in  PT_Base_Data.h  PT_Colors.h  PT_Data.cpp  PT_Data.h  PT_IO.cpp  PT_IO.h  PT_Log.cpp  PT_Log.h  PT_Sorters.cpp  PT_Sorters.h  PT_Types.cpp  PT_Types.h  PT_Util.cpp  PT_Util.h  dral2PTV.cpp  pipetrace.cpp  pipetrace.h  ps_common.h  rgx.cpp  rgx.h  xfopen.cpp  xfopen.h
tools/stc2stb/src/: .cvsignore  Makefile.am  Makefile.in  stc2stb.cpp
tools/vcgDreams/: Makefile.am  Makefile.in  vcgDreams.cpp  vcgDreams.h  vcgdListener.cpp  vcgdListener.h  vcgdNode.cpp  vcgdNode.h
tools/vcgDreams/vcgen/: Makefile.am  Makefile.in
(+326 files in other folders)
